Add parameters to run nova over httpd
This adds the necessary hieradata to run nova over httpd instead
of eventlet.

Change-Id: I57fb20cf0d58b3376243ba4aeb04e995e7152ce3

--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -53,6 +53,13 @@ parameters:
       path: /var/log/nova/nova-api.log
 
 resources:
+  ApacheServiceBase:
+    type: ./apache.yaml
+    properties:
+      ServiceNetMap: {get_param: ServiceNetMap}
+      DefaultPasswords: {get_param: DefaultPasswords}
+      EndpointMap: {get_param: EndpointMap}
+
   NovaBase:
     type: ./nova-base.yaml
     properties:
@@ -72,6 +79,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
+          - get_attr: [ApacheServiceBase, role_data, config_settings]
           - nova::api::osapi_compute_workers: {get_param: NovaWorkers}
             nova::api::metadata_workers: {get_param: NovaWorkers}
             nova::cron::archive_deleted_rows::hour: '"*/12"'
@@ -100,6 +108,16 @@ outputs:
             # internal_api_uri -> [IP]
             # internal_api_subnet - > IP/CIDR
             nova::api::api_bind_address: {get_param: [ServiceNetMap, NovaApiNetwork]}
+            nova::wsgi::apache::ssl: false
+            nova::wsgi::apache::bind_host: {get_param: [ServiceNetMap, NovaApiNetwork]}
+            nova::wsgi::apache::servername:
+              str_replace:
+                template:
+                  '"%{::fqdn_$NETWORK}"'
+                params:
+                  $NETWORK: {get_param: [ServiceNetMap, MysqlNetwork]}
+            nova::wsgi::apache::workers: {get_param: NovaWorkers}
+            nova::wsgi::apache::bind_host: {get_param: [ServiceNetMap, NovaApiNetwork]}
             nova::api::metadata_listen: {get_param: [ServiceNetMap, NovaMetadataNetwork]}
             nova::api::neutron_metadata_proxy_shared_secret: {get_param: NeutronMetadataProxySharedSecret}
             nova::api::instance_name_template: {get_param: InstanceNameTemplate}
