--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -101,3 +101,11 @@ outputs:
           cinder::keystone::auth::admin_url_v3: {get_param: [EndpointMap, CinderV3Admin, uri]}
           cinder::keystone::auth::password: {get_param: CinderPassword}
           cinder::keystone::auth::region: {get_param: KeystoneRegion}
+        mysql:
+          cinder::db::mysql::password: {get_param: CinderPassword}
+          cinder::db::mysql::user: cinder
+          cinder::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
+          cinder::db::mysql::dbname: cinder
+          cinder::db::mysql::allowed_hosts:
+            - '%'
+            - "%{hiera('mysql_bind_host')}"
