--- a/puppet/services/manila-api.yaml
+++ b/puppet/services/manila-api.yaml
@@ -72,3 +72,11 @@ outputs:
           manila::keystone::auth::admin_url_v2: {get_param: [EndpointMap, ManilaAdmin, uri]}
           manila::keystone::auth::password: {get_param: ManilaPassword}
           manila::keystone::auth::region: {get_param: KeystoneRegion}
+        mysql:
+          manila::db::mysql::password: {get_param: ManilaPassword}
+          manila::db::mysql::user: manila
+          manila::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
+          manila::db::mysql::dbname: manila
+          manila::db::mysql::allowed_hosts:
+            - '%'
+            - "%{hiera('mysql_bind_host')}"
