Set manila::keystone::auth::tenant
Without setting this parameter, overcloud deploy fails and
'openstack stack failures list overcloud' reveals the
following error:

    Error: Puppet::Type::Keystone_user_role::ProviderOpenstack: Could
not find project with name [services] and domain [Default]
    Error:
/Stage[main]/Manila::Keystone::Auth/Keystone::Resource::Service_identity[manilav2]/Keystone_user_role[manilav2@services]:
Could not evaluate: undefined method `[]' for nil:NilClass

When we set manila::keystone::auth::tenant to 'service', analogous
to cinder, nova, etc., the overcloud deploy completes successfully.

Change-Id: I996ac2ff602c632a9f9ea9c293472a6f2f92fd72

--- a/puppet/services/manila-api.yaml
+++ b/puppet/services/manila-api.yaml
@@ -63,6 +63,7 @@ outputs:
         include ::tripleo::profile::base::manila::api
       service_config_settings:
         keystone:
+          manila::keystone::auth::tenant: 'service'
           manila::keystone::auth::public_url: {get_param: [EndpointMap, ManilaV1Public, uri]}
           manila::keystone::auth::internal_url: {get_param: [EndpointMap, ManilaV1Internal, uri]}
           manila::keystone::auth::admin_url: {get_param: [EndpointMap, ManilaV1Admin, uri]}
