Fix NTP servers hieradata
This patch enables correctly setting the NTP server passed via
--ntp-server in the overcloud nodes' /etc/ntp.conf.

Change-Id: Iff644b9da51fb8cd1946ad9d297ba0e94d3d782b

--- a/puppet/services/time/ntp.yaml
+++ b/puppet/services/time/ntp.yaml
@@ -32,7 +32,7 @@ outputs:
     value:
       service_name: ntp
       config_settings:
-        ntp::ntpservers: {get_param: NtpServer}
+        ntp::servers: {get_param: NtpServer}
         tripleo.ntp.firewall_rules:
           '105 ntp':
             dport: 123
