--- a/puppet/objectstorage-role.yaml
+++ b/puppet/objectstorage-role.yaml
@@ -314,6 +314,51 @@ outputs:
   hostname:
     description: Hostname of the server
     value: {get_attr: [SwiftStorage, name]}
+  hostname_map:
+    description: Mapping of network names to hostnames
+    value:
+      external:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - external
+          - {get_param: CloudDomain}
+      internal_api:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - internalapi
+          - {get_param: CloudDomain}
+      storage:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - storage
+          - {get_param: CloudDomain}
+      storage_mgmt:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - storagemgmt
+          - {get_param: CloudDomain}
+      tenant:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - tenant
+          - {get_param: CloudDomain}
+      management:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - management
+          - {get_param: CloudDomain}
+      ctlplane:
+        list_join:
+        - '.'
+        - - {get_attr: [SwiftStorage, name]}
+          - ctlplane
+          - {get_param: CloudDomain}
   hosts_entry:
     value:
       str_replace:
