Select per-network hostnames for service_node_names
Co-Authored-By: Juan Antonio Osorio Robles <jaosorior@redhat.com>
Depends-On: Ic6fec1057439ed9122d44ef294be890d3ff8a8ee
Change-Id: I754c4a41d8a294a4c7c18bd282ae014efd4b9b16
Closes-Bug: #1628521
(cherry picked from commit 6a408ff27e6fd6bff0a822f225c77a76690f805a)

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -24,6 +24,8 @@ parameters:
     type: json
   service_node_names:
     type: json
+  short_service_node_names:
+    type: json
   controller_names:
     type: comma_delimited_list
   memcache_node_ips:
@@ -116,6 +118,7 @@ resources:
                   # provides a mapping of service_name_ips to a list of IPs
                   - {get_param: service_ips}
                   - {get_param: service_node_names}
+                  - {get_param: short_service_node_names}
                   - controller_node_ips:
                       list_join:
                       - ','
